docs(swagger): add updateProduct handler docs
